lab1/Test/L1-A-6-54.output
Error Type B at Line 2
Error Type B at Line 3
Error Type A at Line 5
Error Type B at Line 6
Error Type B at Line 8
Error Type B at Line 13
Error Type A at Line 14
