lab1/Test/L1-A-6-54.cmm
struct h7HScAqIWvCqr nYATzcAxYY ( ) {
>=   int rYQf4JHyh4F8N [ 256384074 ] [ 2095502936 
    ] [ ] = bFJAj1U9w9aI0q , UpfYExkOgQjwDqAYy ;
}
float nYhewkUhgyO ( ) ~{
  struct dsPyno7oSLo27rswjU A = ;
}
int XVGjhnpwG2m3dW ( {
}
int ;
struct {
}wwDh ( int zSOhxSiosO2AnLhI ) {
&& }
int ~xT ( ) {
}
